--- a/backstage-plugin-scaffolder-backend-module-pulumi/package.json
+++ b/backstage-plugin-scaffolder-backend-module-pulumi/package.json
@@ -1,7 +1,7 @@
 {
   "name": "backstage-plugin-scaffolder-backend-module-pulumi",
   "description": "The pulumi module for @backstage/plugin-scaffolder-backend",
-  "version": "0.2.33",
+  "version": "0.3.0",
   "main": "src/index.ts",
   "types": "src/index.ts",
   "license": "Apache-2.0",
@@ -23,12 +23,13 @@
     "postpack": "backstage-cli package postpack"
   },
   "dependencies": {
-    "@backstage/plugin-scaffolder-backend": "^1.15.0",
-    "@pulumi/pulumi": "^3.73.0"
+    "@backstage/plugin-scaffolder-backend": "^1.15.1",
+    "@pulumi/pulumi": "^3.77.1",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@backstage/backend-common": "^0.19.0",
-    "@backstage/cli": "^0.22.8"
+    "@backstage/cli": "^0.22.9"
   },
   "files": [
     "dist"
