--- a/scaffolder-templates/microservice-kubernetes-template/skeleton/catalog-info.yaml
+++ b/scaffolder-templates/microservice-kubernetes-template/skeleton/catalog-info.yaml
@@ -1,13 +1,13 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: ${{values.component_id}}-service
+  name: ${{values.component_id}}
   {%- if values.description %}
   description: ${{values.description | dump}}
   {%- endif %}
   annotations:
     github.com/project-slug: ${{values.destination.owner + "/" + values.destination.repo}}
-    pulumi.com/owner: ${{values.organization }}
+    pulumi.com/owner: ${{values.organization + "/" + values.name + "/" + values.stack}}
 spec:
   type: service
   lifecycle: development
