--- a/backstage-plugin-scaffolder-backend-module-pulumi/package.json
+++ b/backstage-plugin-scaffolder-backend-module-pulumi/package.json
@@ -1,9 +1,9 @@
 {
   "name": "backstage-plugin-scaffolder-backend-module-pulumi",
   "description": "The pulumi module for @backstage/plugin-scaffolder-backend",
-  "version": "0.3.0",
-  "main": "src/index.ts",
-  "types": "src/index.ts",
+  "version": "0.3.3",
+  "main": "dist/index.cjs.js",
+  "types": "dist/index.d.ts",
   "license": "Apache-2.0",
   "publishConfig": {
     "access": "public",
