--- a/scaffolder-templates/kubernetes-template/template.yaml
+++ b/scaffolder-templates/kubernetes-template/template.yaml
@@ -174,6 +174,7 @@ spec:
       name: Cookie cut the component Pulumi project
       action: pulumi:new
       input:
+        name: "${{ parameters.component_id }}-infrastructure"
         description: ${{ parameters.description | dump }}
         organization: ediri
         stack: ${{ parameters.stack }}
