--- a/scaffolder-backend-module-pulumi/package.json
+++ b/scaffolder-backend-module-pulumi/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "backstage-plugin-scaffolder-backend-module-pulumi",
-  "description": "The pulumi module for @backstage/plugin-scaffolder-backend",
+  "name": "@ediri/scaffolder-backend-module-pulumi",
   "version": "0.3.7",
   "main": "dist/index.cjs.js",
   "types": "dist/index.d.ts",
