--- a/scaffolder-templates/microservice-kubernetes-template/skeleton/catalog-info.yaml
+++ b/scaffolder-templates/microservice-kubernetes-template/skeleton/catalog-info.yaml
@@ -7,7 +7,7 @@ metadata:
   {%- endif %}
   annotations:
     github.com/project-slug: ${{values.destination.owner + "/" + values.destination.repo}}
-    pulumi.com/owner: ${{values.organization + "/" + values.name + "/" + values.stack}}
+    pulumi.com/project-slug: ${{values.organization + "/" + values.name + "/" + values.stack}}
 spec:
   type: service
   lifecycle: development
