feat: add next template

--- a/scaffolder-templates/microservice-kubernetes-template/skeleton/.github/workflows/build.yaml
+++ b/scaffolder-templates/microservice-kubernetes-template/skeleton/.github/workflows/build.yaml
@@ -34,7 +34,7 @@ jobs:
           context: .
           push: true
           file: Dockerfile
-          tags: ghcr.io/${{values.destination.owner}}/${{values.component_id}}:${{ '${{ github.sha }}' }},ghcr.io/${{values.destination.owner}}/${{values.component_id}}:latest
+          tags: ghcr.io/${{values.destination.owner}}/${{values.name}}:${{ '${{ github.sha }}' }},ghcr.io/${{values.destination.owner}}/${{values.name}}:latest
 
   generate:
     name: Generate Kubernetes manifests
@@ -50,7 +50,7 @@ jobs:
       - uses: imranismail/setup-kustomize@6691bdeb1b0a3286fb7f70fd1423c10e81e5375f # v2.0.0
         name: Setup Kustomize
       - run: |
-          kustomize edit set image goapp=ghcr.io/${{values.destination.owner}}/${{values.component_id}}:${{ '${{ github.sha }}' }}
+          kustomize edit set image goapp=ghcr.io/${{values.destination.owner}}/${{values.name}}:${{ '${{ github.sha }}' }}
           cat kustomization.yaml
           git config --local user.email "action@github.com"
           git config --local user.name "Deploy Action"
