--- a/scaffolder-templates/microservice-kubernetes-template/skeleton/kustomize/deployment.yaml
+++ b/scaffolder-templates/microservice-kubernetes-template/skeleton/kustomize/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: ${{values.component_id}}-deployment
+  name: ${{values.name}}-deployment
 spec:
   selector:
     matchLabels:
