--- a/scaffolder-templates/microservice-kubernetes-template/skeleton/kustomize/services.yaml
+++ b/scaffolder-templates/microservice-kubernetes-template/skeleton/kustomize/services.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: ${{values.component_id}}-service
+  name: ${{values.name}}-service
 spec:
   selector:
     app: goapp
