feat: add next template

--- a/scaffolder-templates/microservice-kubernetes-template/template.yaml
+++ b/scaffolder-templates/microservice-kubernetes-template/template.yaml
@@ -45,6 +45,7 @@ spec:
     - title: Configure Infrastructure
       required:
         - stack
+        - resource
       properties:
         resource:
           title: Kubernetes Cluster
